<resources>
    <string name="app_name">Transit Location Tracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_route">Register Route</string>
    <string name="enable_tracking">Enable tracking</string>
    <string name="display_map">Display Map</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello User</string>
    <string name="title_activity_maps">Map</string>
    <string name="tracking_enabled_notif">Tracking Enabled</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="disable_tracking">Disable Tracking</string>
</resources>
